--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 		"lint": "eslint .",
 		"format": "prettier --write .",
 		"preview": "vite preview",
-		"prepare": "husky install"
+		"prepare": "husky install",
+		"test": "vitest",
+		"coverage": "vitest --coverage"
 	},
 	"dependencies": {
 		"react": "^18.3.1",
@@ -18,19 +20,24 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.13.0",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.0.1",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
 		"@vitejs/plugin-react": "^4.3.3",
+		"@vitest/coverage-v8": "^2.1.5",
 		"eslint": "^9.13.0",
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"eslint-plugin-react-refresh": "^0.4.14",
 		"globals": "^15.11.0",
 		"husky": "^9.1.6",
+		"jsdom": "^25.0.1",
 		"lint-staged": "^15.2.10",
 		"prettier": "^3.3.3",
 		"typescript": "~5.6.2",
 		"typescript-eslint": "^8.11.0",
-		"vite": "^5.4.10"
+		"vite": "^5.4.10",
+		"vitest": "^2.1.5"
 	},
 	"lint-staged": {
 		"*.{js,ts,jsx,tsx}": "eslint --cache --fix",
