Run tests pre-commit

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 	},
 	"lint-staged": {
 		"*.{js,ts,jsx,tsx}": "eslint --cache --fix",
-		"*.{js,ts,jsx,tsx,css,md}": "prettier --write"
+		"*.{js,ts,jsx,tsx,css,md}": "prettier --write",
+    "*": "vitest related --run"
 	}
 }
